# quantregCF-py

./: .gitignore  README.md  setup.cfg  setup.py
src/quantregCF/: __init__.py  asympt_variance.py  dev_lambda.py  loaddata.py  quantregCF.py  second_reg.py
src/quantregCF-py/: R_compat_quantile.py  asympt_variance.py  dev_lambda.py  eval_bspline_basis.py  first_reg.py  kernel.py  loaddata.py  main.py  quantregCF.py  second_reg.py
src/quantregCF-py/asympt_variance/: asympt_variance.py  kernel.py
src/quantregCF-py/first_stage_reg/: reg.py
src/quantregCF-py/load_data/: data.py
src/quantregCF-py/second_stage_reg/: R_compat_quantile.py  eval_bspline_basis.py  reg.py
src/quantregCF.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: fishdata.py  original.py
