[metadata]
name = quantregCF
version = 0.0.8
author = Simon Lee, Max Mongkalakorn
author_email = sl3841@columbia.edu, sm4791@columbia.edu
description = A Python package for quantile regression using control function approach
long_description = Based on the paper by Professor Sokbae "Simon" Lee, "Endogeneity in Quantile Regression Models: A Control Function Approach", Journal of Econometrics, 141: 1131-1158, 2007.
long_description_content_type = text/markdown
url = https://github.com/quantregCF
project_urls =
    Bug Tracker = https://github.com/quantregCF/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
